added auto meta description

--- a/begin/index.html
+++ b/begin/index.html
@@ -4,5 +4,6 @@ author_url: http://jpliew.com
 github_url: http://github.com/stemtera
 layout: book 
 title: STEMTera&trade; Breadboard Beginner's Guide
+description: An introduction to STEMTera Breadboard and beginner's HOWTO use guide.
 category: begin
 ---
