--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="1; url=/begin">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/manifest.json">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="theme-color" content="#ffffff">
+        <meta property="og:url" content="http://learn.stemtera.com" />
+        <meta property="og:type" content="article" />
+        <meta property="og:title" content="Learn STEMTerai&trade; Breadboard" />
+        <meta property="og:description" content="Learn Arduino with STEMTera&trade; Breadboard." />
+        <meta property="og:image" content="http://learn.stemtera.com/img/banner.jpg" />
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@stemtera">
+        <meta name="twitter:title" content="Learn STEMTera&trade; Breadboard">
+        <meta name="twitter:description" content="Learn Arduino with STEMTera&trade; Breadboard.">
+        <meta name="twitter:creator" content="@stemtera">
+        <meta name="twitter:image" content="http://learn.stemtera.com/img/banner.jpg">
+        <meta name="twitter:domain" content="stemtera.com"> 
+        <meta name="description" content="Learn Arduino with STEMTera&trade; Breadboard.">
         <script type="text/javascript">
             window.location.href = "/begin"
         </script>
