added twitter card auto and CNAME

--- a/begin/index.html
+++ b/begin/index.html
@@ -2,8 +2,9 @@
 author: JP Liew
 author_url: http://jpliew.com
 github_url: http://github.com/stemtera
+twitter_username: stemtera
 layout: book 
 title: STEMTera&trade; Breadboard Beginner's Guide
-description: An introduction to STEMTera Breadboard and beginner's HOWTO use guide.
+description: An Introduction to STEMTera Breadboard and Beginner's HOWTO Use Guide.
 category: begin
 ---
