--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="1; url=/begin">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-        <link rel="manifest" href="/manifest.json">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="/img/icon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/img/icon/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/img/icon/manifest.json">
+        <link rel="mask-icon" href="/img/icon/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="/img/icon/favicon.ico">
+        <meta name="msapplication-config" content="/img/icon/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
         <meta property="og:url" content="{{ site.url }}" />
         <meta property="og:type" content="article" />
