fixed twitter card not showing svg

--- a/begin/index.html
+++ b/begin/index.html
@@ -6,6 +6,6 @@ twitter_username: stemtera
 layout: book 
 title: STEMTera&trade; Breadboard Beginner's Guide
 description: An Introduction to STEMTera Breadboard and Beginner's HOWTO Use Guide.
-cover_image: cover.svg
+cover_image: cover.png
 category: begin
 ---
