--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <meta property="og:title" content="{{ site.title }}" />
         <meta property="og:description" content="{{ site.description }}" />
         <meta property="og:image" content="{{ site.image }}" />
+        <meta property="fb:app_id" content="{{ site.facebook_app_id }}"/>
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@{{ site.twitter_username }}">
         <meta name="twitter:title" content="{{ site.title }}">
