added more pages, (STMB) replacement'

--- a/begin/index.html
+++ b/begin/index.html
@@ -4,8 +4,8 @@ author_url: http://jpliew.com
 github_url: http://github.com/stemtera
 twitter_username: stemtera
 layout: book 
-title: STEMTera&trade; Breadboard Beginner's Guide
-description: An Introduction to STEMTera Breadboard and Beginner's HOWTO Use Guide.
+title: (STMB) Beginner's Guide
+description: An Introduction to (STMB) and Beginner's HOWTO Use Guide.
 cover_image: cover.png
 category: begin
 ---
