--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         <meta name="theme-color" content="#ffffff">
         <meta property="og:url" content="{{ site.url }}" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="{{ site.title }}" />
-        <meta property="og:description" content="{{ site.description }}" />
+        <meta property="og:title" content="{{ site.title | replace: site.stmb_key, site.stmb }}" />
+        <meta property="og:description" content="{{ site.description | replace: site.stmb_key, site.stmb }}" />
         <meta property="og:image" content="{{ site.image }}" />
         <meta property="fb:app_id" content="{{ site.facebook_app_id }}"/>
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@{{ site.twitter_username }}">
-        <meta name="twitter:title" content="{{ site.title }}">
-        <meta name="twitter:description" content="{{ site.description }}">
+        <meta name="twitter:title" content="{{ site.title | replace: site.stmb_key, site.stmb }}">
+        <meta name="twitter:description" content="{{ site.description | replace: site.stmb_key, site.stmb }}">
         <meta name="twitter:creator" content="@{{ site.twitter_username }}">
         <meta name="twitter:image" content="{{ site.image }}">
         <meta name="twitter:domain" content="stemtera.com"> 
-        <meta name="description" content="{{ site.description }}">
+        <meta name="description" content="{{ site.description | replace: site.stmb_key, site.stmb }}">
         <script type="text/javascript">
             window.location.href = "/begin"
         </script>
-        <title>{{ site.title }} Redirection</title>
+        <title>{{ site.title | replace: site.stmb_key, site.stmb }} Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='/begin'>STEMTera&trade; Breaboard Beginner's Guide</a>.
+        If you are not redirected automatically, follow this <a href='/begin'>(STMB) Beginner's Guide</a>.
     </body>
 </html>
