--- a/begin/index.html
+++ b/begin/index.html
@@ -1,7 +1,7 @@
 ---
 author: JP Liew
 author_url: http://jpliew.com
-github_url: http://github.com/stemtera
+github_url: https://github.com/STEMTera/stemtera.github.io 
 twitter_username: stemtera
 layout: book 
 title: (STMB) Beginner's Guide
