--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=/begin">
+        <meta http-equiv="refresh" content="1; url=/en/begin">
         <link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
         <link rel="icon" type="image/png" href="/img/icon/favicon-32x32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="/img/icon/favicon-16x16.png" sizes="16x16">
@@ -28,12 +28,12 @@
         <meta name="twitter:domain" content="stemtera.com"> 
         <meta name="description" content="{{ site.description | replace: site.stmb_key, site.stmb }}">
         <script type="text/javascript">
-            window.location.href = "/begin"
+            window.location.href = "/en/begin"
         </script>
         <title>{{ site.title | replace: site.stmb_key, site.stmb }} Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='/begin'>(STMB) Beginner's Guide</a>.
+        If you are not redirected automatically, follow this <a href='/en/begin'>(STMB) Beginner's Guide</a>.
     </body>
 </html>
