fixed main page box layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 ---
 layout:     default
-title:      WngLMng's Blog
-subtitle:   嗨，我是王立明，一名来自黑龙江省鹤岗市的男生。<br/>现于无线生活（北京），从事互联网开发工作。
+title: Learn (STMB)  
 ---
+<link href="//cdn.bootcss.com/flex-layout-attribute/1.0.3/css/flex-layout-attribute.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/css/fbmain.css">
 
 <link rel="stylesheet" type="text/css" href="{{ "/css/homepage.css" | prepend: site.baseurl }}">
-
-<link rel="stylesheet" type="text/css" href="{{ "/css/fbmain.css" | prepend: site.baseurl }}">
 
 <div class="container--grid home-container">
     <ul layout="rows top-left" id="MixItUpF13DC5">
