fixed facebook og:image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout:     default
 title: What do you want to make?  
 description: Collection of articles, tutorials, and resources written for the (STMB).
 author: jpliew
-cover_image: cover.png
+cover_image: banner.jpg 
 ---
 <link href="//cdn.bootcss.com/flex-layout-attribute/1.0.3/css/flex-layout-attribute.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/fbmain.css">
