updated gems, fixed index.html columns, fixed css double loaded

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ description: Collection of articles, tutorials, and resources written for the (S
 author: jpliew
 cover_image: banner.jpg 
 ---
+<!-- <link href="/css/flex-layout-attribute.min.css" rel="stylesheet"> -->
+<link rel="stylesheet" type="text/css" href="/css/fbmain.css">
 <link rel="stylesheet" type="text/css" href="{{ "/css/homepage.css" | prepend: site.baseurl }}">
 
 <div class="container--grid home-container">
