--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: What do you want to make?
 description: Collection of articles, tutorials, and resources written for the (STMB).
 author: jpliew
 cover_image: banner.jpg 
+lang: en
 ---
 <!-- <link href="/css/flex-layout-attribute.min.css" rel="stylesheet"> -->
 <link rel="stylesheet" type="text/css" href="/css/fbmain.css">
